Jan 20 HTML structure

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-<style>
-  .college {
-    background-color: green;
-    color: aqua;
-    font-size: 18px;
-    margin-bottom: 0px;
-    padding-left: 20px;
-    padding-top: 20px;
-  }
-  .school {
-    background-color: green;
-    color: aqua;
-    font-size: 36px;
-    margin-top: 0px;
-    padding-left: 20px;
-    padding-bottom: 20px;
-  }
-</style>
-<p class="college">VOILAND COLLEGE OF ENGINEERING AND ARCHITECTURE</p>
-<p class="school">School of Electrical Engineering & Computer Science</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>WSU EECS</title>
+  </head>
+  <body>
+    <p class="college">
+      <a id="wsu-link" href="https://www.wsu.edu"
+        >VOILAND COLLEGE OF ENGINEERING AND ARCHITECTURE</a
+      >
+    </p>
+    <p class="school">
+      School of Electrical Engineering &
+      <span class="comp-sci">Computerrrrrrrr Science</span>
+    </p>
+  </body>
+</html>
