--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
       School of Electrical Engineering &
       <span class="comp-sci">Computerrrrrrrr Science</span>
     </p>
+    <div class="dmessage">
+      <div class="dm-top">
+        <p class="dtitle">director's message</p>
+      </div>
+      <div class="dcontent">
+        <img class="dir" src="partha.jpeg" alt="" />
+        <p class="dm-content">
+          As a new school year gets underway, we’re excited about our new
+          cybersecurity program, new research opportunities, and expanding
+          programs. Our School of Electrical Engineering and Computer Science is
+          growing and thriving.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
