--- a/index.html
+++ b/index.html
@@ -3,31 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
     <title>WSU EECS</title>
   </head>
-  <body>
-    <img class="logo" src="logo.png" alt="" />
-    <div class="title">
-      <p class="college">
-        <a id="wsu-link" href="https://www.wsu.edu"
-          >VOILAND COLLEGE OF ENGINEERING AND ARCHITECTURE</a
-        >
-      </p>
-      <p class="school">
-        School of Electrical Engineering &
-        <span class="comp-sci">Computerrrrrrrr Science</span>
-      </p>
-    </div>
-    <div>
-      <img src="partha.jpeg" alt="" />
-      <p>Director's Message</p>
-      <p>
-        As a new school year gets underway, we’re excited about our new
-        cybersecurity program, new research opportunities, and expanding
-        programs. Our School of Electrical Engineering and Computer Science is
-        growing and thriving.
-      </p>
-    </div>
-  </body>
+  <body></body>
 </html>
